[package]
name = "ate"
version = "0.4.2"
authors = ["LT"]
edition = "2018"

[dependencies]
teloxide = { git = "https://github.com/teloxide/teloxide", branch = "dev", features = ["redis-storage", "bincode-serializer", "macros"]}
log = "*"
pretty_env_logger = "*"
tokio = { version =  "*", features = ["rt-threaded", "fs", "macros"] }
futures = "*"
pickledb = "*"
serde = "*"
parking_lot = "*"
fuzzy-matcher = "*"
nanoid  = "*"
random_choice = "*"
serde_json = "*"
